# Foobar-Bloom-filter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-publish.yml  test.yml
github/workflows/: test.yml
src/: HashFunction.cpp  HashFunction.h  bloomFilter.cpp  bloomFilter.h  global.cpp  global.h  log.cpp  log.h  logicToBloomFilter.cpp  logicToBloomFilter.h  main.cpp  server.cpp  server.h
tests/: calc_text.cpp  test_bloomFilter.cpp
